Mejora en la lectura utilizando metodos helper, hay que revisar porque la duracion estimada no se guarda